--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath "org.grails:grails-gradle-plugin:$grailsVersion"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.8.2"
         classpath "org.grails.plugins:hibernate4:5.0.0.BUILD-SNAPSHOT"
+        classpath "org.grails.plugins:views-gradle:1.0.9"
     }
 }
 
@@ -33,6 +34,8 @@ apply plugin:"war"
 apply plugin:"org.grails.grails-web"
 apply plugin:"org.grails.grails-gsp"
 apply plugin:"asset-pipeline"
+apply plugin: "org.grails.grails-web"
+apply plugin: "org.grails.plugins.views-json"
 
 ext {
     grailsVersion = project.grailsVersion
@@ -65,6 +68,8 @@ dependencies {
     compile "org.grails.plugins:mongodb:5.0.0.BUILD-SNAPSHOT"
     compile "org.grails.plugins:hibernate4:5.0.0.BUILD-SNAPSHOT"
     compile "org.hibernate:hibernate-ehcache"
+
+    compile "org.grails.plugins:views-json:1.0.9"
 
     console "org.grails:grails-console"
     profile "org.grails.profiles:web:3.1.6"
