--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "watch": "webpack --watch --colors --progress",
     "bundle": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha './src/test/js/*.spec.js' --compilers js:babel-core/register"
   },
-  "author": "",
+  "author": "Zachary Klein",
   "license": "ISC",
   "dependencies": {
     "react": "^15.0.2",
@@ -21,6 +21,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "expect": "^1.20.1",
+    "expect-jsx": "^2.5.1",
+    "jsdom": "^9.1.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^15.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0"
   }
